- Added chapter selection - added Ended/Continuing badges for series - updated style for age rating and codecs - fixed overflow issue with cells under the button row

--- a/packages/app/src/components/MediaCard/MediaCard.module.less
+++ b/packages/app/src/components/MediaCard/MediaCard.module.less
@@ -179,6 +179,20 @@
 	-webkit-backdrop-filter: blur(4px);
 }
 
+.overview {
+	font-size: 15px;
+	font-weight: 400;
+	color: rgba(255, 255, 255, 0.5);
+	margin-top: 6px;
+	line-height: 1.4;
+	display: -webkit-box;
+	-webkit-line-clamp: 3;
+	-webkit-box-orient: vertical;
+	overflow: hidden;
+	text-overflow: ellipsis;
+	white-space: normal;
+}
+
 .watchedBadge {
 	@import '../../styles/mixins.less';
 	.watched-badge();
